More or less working WebGL renderer.